--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <div class="form-group">
+        <input type="text" class="form-control" [(ngModel)]="searchStatus">
+      </div>
       <ul class="list-group">
         <li
           class="list-group-item"
-          *ngFor="let server of servers"
+          *ngFor="let server of servers | filter: searchStatus: 'status'"
           [ngClass]="getStatusClasses(server)">
           <span
             class="badge">
