pure & impure of pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <div class="form-group">
-        <input type="text" class="form-control" [(ngModel)]="searchStatus">
+        <input type="text" class="form-control" [(ngModel)]="searchStatus"><br/>
+        <button class="btn btn-default" (click)="onCreateServer()">Create Server</button><br/>
       </div>
       <ul class="list-group">
         <li
