--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,13 +30,13 @@
       <ul class="list-group">
         <li
           class="list-group-item"
-          *ngFor="let server of servers | filter: searchStatus: 'status'"
+          *ngFor="let server of servers | filter: searchStatus: 'status' | sort: 'status'"
           [ngClass]="getStatusClasses(server)">
           <span
             class="badge">
             {{ server.status }}
           </span>
-          <strong>{{ server.name | shorten: 10 }}</strong> |
+          <strong>{{ server.name | shorten: 10}}</strong> |
           {{ server.instanceType | uppercase | reverse}} |
           {{ server.started | date: 'fullDate' | uppercase}}
         </li>
